[tool.poetry]
name = "qraphql"
version = "0.1.0"
description = ""
authors = ["Ильдар Галеев <ildar-galeev92@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
graphene = "^3.3"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.27"
strawberry-graphql = {extras = ["debug-server"], version = "^0.219.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
